--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@ services:
     ports:
       - "8080:8080"
       - "50000:50000"
+    environment:
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false      
     volumes:
       - ./webz-004/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
